--- a/index.html
+++ b/index.html
@@ -160,6 +160,44 @@
       50%  { filter: brightness(0.8) blur(0); }
       100% { filter: brightness(1) blur(0); }
     }
+    .hit-spark {
+      position: absolute;
+      width: 20px;
+      height: 20px;
+      background: radial-gradient(circle, #ff69b4 0%, rgba(255,105,180,0) 70%);
+      pointer-events: none;
+      animation: spark 0.4s ease-out forwards;
+      z-index: 9;
+    }
+    @keyframes spark {
+      from { transform: scale(0.5); opacity: 1; }
+      to   { transform: scale(2); opacity: 0; }
+    }
+    #damage-overlay {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: rgba(255, 0, 0, 0.4);
+      pointer-events: none;
+      animation: damageFlash 0.3s ease-out forwards;
+      z-index: 20;
+    }
+    @keyframes damageFlash {
+      from { opacity: 0.6; }
+      to   { opacity: 0; }
+    }
+    .shake {
+      animation: shake 0.3s;
+    }
+    @keyframes shake {
+      0% { transform: translate(0, 0); }
+      25% { transform: translate(-5px, 5px); }
+      50% { transform: translate(5px, -5px); }
+      75% { transform: translate(-5px, -5px); }
+      100% { transform: translate(0, 0); }
+    }
   </style>
 </head>
 <body>
@@ -325,6 +363,38 @@
         setTimeout(() => heart.remove(), 800);
       }
 
+      function showDamageText(x, y, text) {
+        const dmg = document.createElement("div");
+        dmg.className = "damage-text";
+        dmg.textContent = text;
+        dmg.style.left = `${x}px`;
+        dmg.style.top = `${y}px`;
+        document.getElementById("game-wrapper").appendChild(dmg);
+        setTimeout(() => dmg.remove(), 1000);
+      }
+
+      function showHitSpark(x, y) {
+        const spark = document.createElement("div");
+        spark.className = "hit-spark";
+        spark.style.left = `${x - 10}px`;
+        spark.style.top = `${y - 10}px`;
+        document.getElementById("game-wrapper").appendChild(spark);
+        setTimeout(() => spark.remove(), 400);
+      }
+
+      function showDamageOverlay() {
+        const overlay = document.createElement("div");
+        overlay.id = "damage-overlay";
+        document.getElementById("container").appendChild(overlay);
+        setTimeout(() => overlay.remove(), 300);
+      }
+
+      function shakeContainer() {
+        const cont = document.getElementById("container");
+        cont.classList.add("shake");
+        setTimeout(() => cont.classList.remove("shake"), 300);
+      }
+
       window.addEventListener("mousemove", (e) => {
         const rect = aimSvg.getBoundingClientRect();
         const dx = e.clientX - rect.left - firePoint.x;
@@ -362,18 +432,21 @@
             enemyHP -= 10;
             flashEnemyDamage();
             updateHPBar();
+            showDamageText(peg.position.x, peg.position.y, "-10");
+            showHitSpark(peg.position.x, peg.position.y);
           }
           if (labels.includes("ball") && labels.includes("bottom-sensor")) {
             const ball = pair.bodyA.label === "ball" ? pair.bodyA : pair.bodyB;
+            const { x, y } = ball.position;
             World.remove(world, ball);
             currentBall = null;
-            setTimeout(() => {
-              launchHeartAttack();
-              setTimeout(() => {
-                playerHP -= 10;
-                updatePlayerHP();
-              }, 500);
-            }, 300);
+            playerHP -= 10;
+            updatePlayerHP();
+            showDamageOverlay();
+            shakeContainer();
+            showDamageText(x, y, "-10");
+            showHitSpark(x, y);
+            launchHeartAttack();
           }
         });
       });
