feat: show cumulative damage

--- a/index.html
+++ b/index.html
@@ -305,6 +305,7 @@
       let currentBall = null;
       let playerHP = 100;
       let enemyHP = 100;
+      let pendingDamage = 0;
 
       const hpFill = document.getElementById("hp-fill");
       const hpText = document.getElementById("hp-text");
@@ -429,10 +430,11 @@
           if (labels.includes("ball") && labels.includes("peg")) {
             const peg = pair.bodyA.label === "peg" ? pair.bodyA : pair.bodyB;
             World.remove(world, peg);
+            pendingDamage += 10;
             enemyHP -= 10;
             flashEnemyDamage();
             updateHPBar();
-            showDamageText(peg.position.x, peg.position.y, "-10");
+            showDamageText(peg.position.x, peg.position.y, "-" + pendingDamage);
             showHitSpark(peg.position.x, peg.position.y);
           }
           if (labels.includes("ball") && labels.includes("bottom-sensor")) {
@@ -444,9 +446,10 @@
             updatePlayerHP();
             showDamageOverlay();
             shakeContainer();
-            showDamageText(x, y, "-10");
+            showDamageText(x, y, "-" + pendingDamage);
             showHitSpark(x, y);
             launchHeartAttack();
+            pendingDamage = 0;
           }
         });
       });
