--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
   <script src="https://cdn.jsdelivr.net/npm/matter-js@0.19.0/build/matter.min.js"></script>
   <script>
     window.addEventListener('DOMContentLoaded', () => {
-      const { Engine, Render, Runner, World, Bodies, Body, Events } = Matter;
+      const { Engine, Render, Runner, World, Bodies, Body, Events, Composite } = Matter;
       const width = 880;
       const height = 700;
       const engine = Engine.create();
@@ -299,12 +299,28 @@
       for (let i = 0; i < pegCount; i++) {
         const x = 50 + Math.random() * (width - 100);
         const y = 150 + Math.random() * (height - 250);
-        const isYellow = Math.random() < 0.2;
-        const peg = Bodies.circle(x, y, 10, {
-          isStatic: true,
-          render: { fillStyle: isYellow ? "#ffd700" : "#ff69b4" },
-          label: isYellow ? "peg-yellow" : "peg"
-        });
+        const r = Math.random();
+        let peg;
+        if (r < 0.1) {
+          peg = Bodies.circle(x, y, 10, {
+            isStatic: true,
+            render: { fillStyle: "#808080" },
+            label: "peg-bomb"
+          });
+          peg.bombHits = 0;
+        } else if (r < 0.3) {
+          peg = Bodies.circle(x, y, 10, {
+            isStatic: true,
+            render: { fillStyle: "#ffd700" },
+            label: "peg-yellow"
+          });
+        } else {
+          peg = Bodies.circle(x, y, 10, {
+            isStatic: true,
+            render: { fillStyle: "#ff69b4" },
+            label: "peg"
+          });
+        }
         pegs.push(peg);
       }
       World.add(world, pegs);
@@ -443,6 +459,31 @@
         setTimeout(() => cont.classList.remove("shake"), 300);
       }
 
+      function explodeBomb(peg, ball) {
+        const { x, y } = peg.position;
+        const bodies = Composite.allBodies(engine.world);
+        let addedDamage = 0;
+        bodies.forEach(body => {
+          if (["peg", "peg-yellow", "peg-bomb"].includes(body.label)) {
+            const dx = body.position.x - x;
+            const dy = body.position.y - y;
+            if (Math.sqrt(dx * dx + dy * dy) <= 80) {
+              World.remove(world, body);
+              let dmg = 10;
+              if (body.label === "peg-yellow") dmg = 20;
+              addedDamage += dmg;
+              showHitSpark(body.position.x, body.position.y);
+            }
+          }
+        });
+        pendingDamage += addedDamage;
+        showDamageText(x, y, "+" + pendingDamage);
+        const bx = ball.position.x - x;
+        const by = ball.position.y - y;
+        const len = Math.sqrt(bx * bx + by * by) || 1;
+        Body.setVelocity(ball, { x: (bx / len) * 20, y: (by / len) * 20 });
+      }
+
       window.addEventListener("mousemove", (e) => {
         const rect = aimSvg.getBoundingClientRect();
         const dx = e.clientX - rect.left - firePoint.x;
@@ -474,7 +515,16 @@
       Events.on(engine, 'collisionStart', (event) => {
         event.pairs.forEach(pair => {
           const labels = [pair.bodyA.label, pair.bodyB.label];
-          if (labels.includes("ball") && (labels.includes("peg") || labels.includes("peg-yellow"))) {
+          if (labels.includes("ball") && labels.includes("peg-bomb")) {
+            const peg = pair.bodyA.label === "peg-bomb" ? pair.bodyA : pair.bodyB;
+            const ball = pair.bodyA.label === "ball" ? pair.bodyA : pair.bodyB;
+            if (!peg.bombHits) {
+              peg.bombHits = 1;
+              peg.render.fillStyle = "#ff4500";
+            } else {
+              explodeBomb(peg, ball);
+            }
+          } else if (labels.includes("ball") && (labels.includes("peg") || labels.includes("peg-yellow"))) {
             const peg = pair.bodyA.label === "ball" ? pair.bodyB : pair.bodyA;
             World.remove(world, peg);
             const damage = peg.label === "peg-yellow" ? 20 : 10;
