--- a/index.html
+++ b/index.html
@@ -231,6 +231,21 @@
       color: #ff1493;
       cursor: pointer;
     }
+    #version-history {
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      width: 100%;
+      background: rgba(255, 255, 255, 0.9);
+      font-size: 12px;
+      color: #333;
+      padding: 4px 8px;
+      box-sizing: border-box;
+    }
+    #version-history ul {
+      margin: 0;
+      padding-left: 16px;
+    }
   </style>
 </head>
 <body>
@@ -258,6 +273,21 @@
     <div id="victory-overlay">
       <img id="victory-img" src="enemy_defete.png" alt="倒された女の子">
       <button id="retry-button">リトライ</button>
+    </div>
+    <div id="version-history">
+      <h3>バージョン履歴</h3>
+      <ul>
+        <li>v0.9.1 (2025-08-05) 初期ボール数を3に設定</li>
+        <li>v0.9 (2025-08-05) 弾数制限とリロードを実装</li>
+        <li>v0.8 (2025-08-05) 爆弾ペグ追加</li>
+        <li>v0.7 (2025-08-04) 敗北オーバーレイとランダム画像</li>
+        <li>v0.6 (2025-08-04) ペグのランダム化と黄色ペグのダブルダメージ</li>
+        <li>v0.5 (2025-08-04) 勝利画像とリトライボタン</li>
+        <li>v0.4 (2025-08-04) 累積ダメージ表示、着地時にダメージ確定</li>
+        <li>v0.3 (2025-08-04) ボール落下ダメージとエフェクト</li>
+        <li>v0.2 (2025-08-04) 敵ダメージ時に画像を一瞬切り替え</li>
+        <li>v0.1 (2025-08-03) 初期リリース</li>
+      </ul>
     </div>
   </div>
 
