feat: add menu screen with start button

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <div id="menu-overlay">
+    <button id="start-button">スタート</button>
+  </div>
   <div id="container">
     <div id="player-hp-container">
       <div id="player-hp-text">HP: <span id="player-hp-value">100</span> / 100</div>
