docs: update version history to v1.2

--- a/index.html
+++ b/index.html
@@ -72,6 +72,8 @@
   <div id="version-history">
     <h3>バージョン履歴</h3>
     <ul>
+      <li>v1.2 (2025-08-06) バージョン履歴を更新</li>
+      <li>v1.1 (2025-08-05) メニュー画面＆スタートボタン、弾数アイコンと特殊弾選択、ステージ進行と敵HPスケール、リロード演出、ステージ5で経験値＆スキル強化を追加</li>
       <li>v1.0 (2025-08-05) ステージ5クリアで経験値獲得＆スキル強化追加</li>
       <li>v0.9.2 (2025-08-05) プレイヤーHP0で敗北オーバーレイ表示</li>
       <li>v0.9.1 (2025-08-05) 初期ボール数を3に設定</li>
