chore: move images into dedicated folder

--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
           <div id="hp-text">200</div>
         </div>
       </div>
-      <img id="enemy-girl" src="enemy_normal.png" alt="敵の女の子">
+      <img id="enemy-girl" src="image/enemy_normal.png" alt="敵の女の子">
     </div>
     <div id="victory-overlay">
-      <img id="victory-img" src="enemy_defete.png" alt="倒された女の子">
+      <img id="victory-img" src="image/enemy_defete.png" alt="倒された女の子">
       <button id="retry-button">リトライ</button>
     </div>
     <div id="reward-overlay">
