feat: show next ball at launch position

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
     <div id="game-wrapper">
       <ol id="progress-indicator"></ol>
       <svg id="aim-svg" width="880" height="700" style="position:absolute;top:0;left:0;z-index:5;"></svg>
+      <div id="current-ball"></div>
     </div>
     <div id="side-panel">
       <div id="stage-text">ステージ: <span id="stage-value">1</span></div>
