ご褒美ボタンのラベルを調整

--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
     </div>
     <div id="reward-overlay">
       <h2>ご褒美ボール選んでね💖</h2>
-      <button class="reward-button" data-type="split">分裂ボール</button>
+      <button class="reward-button" data-type="split">スプリットボール</button>
       <button class="reward-button" data-type="heal">回復ボール</button>
-      <button class="reward-button" data-type="big">デカボール</button>
+      <button class="reward-button" data-type="big">ビッグボール</button>
     </div>
     <div id="event-overlay">
       <h2 id="event-title">ランダムイベント発生☆</h2>
