docs: add v1.4 release notes

--- a/index.html
+++ b/index.html
@@ -113,6 +113,7 @@
   <div id="version-history">
     <h3>バージョン履歴</h3>
     <ul>
+      <li>v1.4 (2025-08-10) 敵画像ファイル名の整理＆参照更新</li>
       <li>v1.3 (2025-08-09) 爆弾衝突のバグ修正＆コインアイコンクレジット追加</li>
       <li>v1.2 (2025-08-06) バージョン履歴を更新</li>
       <li>v1.1 (2025-08-05) メニュー画面＆スタートボタン、弾数アイコンと特殊弾選択、ステージ進行と敵HPスケール、リロード演出、ステージ5で経験値＆スキル強化を追加</li>
