feat: load enemy image on stage start

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         </div>
       </div>
       <div id="enemy-image-wrapper">
-        <img id="enemy-girl" src="image/enemy_normal.png" alt="敵の女の子">
+        <img id="enemy-girl" src="" alt="敵の女の子">
         <div id="enemy-attack-timer"></div>
       </div>
     </div>
