refactor: 画像アセットをサブフォルダに整理

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <div id="player-hp-fill"></div>
       </div>
       <div id="ammo-text">弾: <span id="ammo-value" class="ammo-value"></span></div>
-      <div id="coin-counter"><img id="coin-icon" src="image/coin.png" alt="coin"><span id="coin-value">0</span></div>
+        <div id="coin-counter"><img id="coin-icon" src="image/items/coin.png" alt="coin"><span id="coin-value">0</span></div>
     </div>
     <div id="game-wrapper">
       <ol id="progress-indicator"></ol>
@@ -52,33 +52,33 @@
       </div>
     </div>
     <div id="victory-overlay">
-      <img id="victory-img" src="image/enemy_defeat.png" alt="倒された女の子">
+        <img id="victory-img" src="image/enemies/enemy_defeat.png" alt="倒された女の子">
     </div>
     <div id="reward-overlay">
       <h2 id="result-title">リザルト</h2>
       <div id="reward-coins">
-        <img src="image/coin.png" alt="coin">
+          <img src="image/items/coin.png" alt="coin">
         <span id="reward-coin-value">0</span>コインGET
       </div>
       <p id="reward-message">報酬ボールを選んでね</p>
       <div id="reward-buttons">
-        <button class="reward-button" data-type="split">
-          <img src="image/split_ball.png" alt="スプリットボール">
+          <button class="reward-button" data-type="split">
+            <img src="image/balls/split_ball.png" alt="スプリットボール">
           <div class="reward-name">スプリットボール</div>
           <div class="reward-desc">弾が2つに分裂するよ♪</div>
         </button>
-        <button class="reward-button" data-type="heal">
-          <img src="image/recovery_ball.png" alt="ヒールボール">
+          <button class="reward-button" data-type="heal">
+            <img src="image/balls/recovery_ball.png" alt="ヒールボール">
           <div class="reward-name">ヒールボール</div>
           <div class="reward-desc">当たるとHP回復するよ☆</div>
         </button>
-        <button class="reward-button" data-type="big">
-          <img src="image/big_ball.png" alt="ビッグボール">
+          <button class="reward-button" data-type="big">
+            <img src="image/balls/big_ball.png" alt="ビッグボール">
           <div class="reward-name">ビッグボール</div>
           <div class="reward-desc">弾がでかくなるよ☆</div>
         </button>
-        <button class="reward-button" data-type="penetration">
-          <img src="image/penetration_ball.png" alt="ペネトレーションボール">
+          <button class="reward-button" data-type="penetration">
+            <img src="image/balls/penetration_ball.png" alt="ペネトレーションボール">
           <div class="reward-name">ペネトレーションボール</div>
           <div class="reward-desc">敵を貫通するよ♡</div>
         </button>
@@ -91,7 +91,7 @@
     </div>
     <div id="shop-overlay">
       <h2>ショップだよ☆</h2>
-      <div id="shop-coin-counter"><img src="image/coin.png" alt="coin"><span id="shop-coin-value">0</span></div>
+        <div id="shop-coin-counter"><img src="image/items/coin.png" alt="coin"><span id="shop-coin-value">0</span></div>
       <div id="shop-options"></div>
       <button id="shop-close">やめる</button>
     </div>
